--- a/wp-content/themes/YAMATAKA/src/scss/_mixin.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_mixin.scss
@@ -1,5 +1,6 @@
 $breakpoint: (
-  tab: "screen and (max-width: 1024px)" sp: "screen and (max-width: 768px)",
+  tab: "screen and (max-width: 1024px)",
+  sp: "screen and (max-width: 768px)",
 );
 @mixin mq($bp) {
   @media #{map-get(breakpoint, bp)} {
