--- a/wp-content/themes/YAMATAKA/src/css/style.css
+++ b/wp-content/themes/YAMATAKA/src/css/style.css
@@ -1,9 +1,67 @@
+@charset "UTF-8";
+/*---------- color ----------*/
 html {
   font-size: 62.5%;
+  font-family: YuGothic, "Yu Gothic", sans-serif;
+  letter-spacing: 0.05em;
 }
 
-/*---------- wrapper ----------*/
+/*---------- 共通調整 ----------*/
 .wrapper {
+  padding: 100px 0;
+}
+@media screen and (max-width: 768px) {
+  .wrapper {
+    padding: 75px 0;
+  }
+}
+
+.inner {
   margin: 0 auto;
-  padding: 0 15px;
+  max-width: 1100px;
+}
+
+.flex_column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex_center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex_center_column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/*---------- header ----------*/
+.header {
+  background: rgba(255, 255, 255, 0.75);
+  padding: 30px;
+  width: 100vw;
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header_img {
+  width: auto;
+  height: 90%;
+}
+.header_img img {
+  width: auto;
+  height: 100%;
+  object-fit: contain;
+}
+.header_nav_list {
+  font-size: 1.5rem;
+  color: #4f6a20;
+}
+.header_nav_list li:not(:last-child) {
+  margin-left: 55px;
 }/*# sourceMappingURL=style.css.map */
