--- a/wp-content/themes/YAMATAKA/src/scss/_mixin.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_mixin.scss
@@ -2,8 +2,9 @@ $breakpoint: (
   tab: "screen and (max-width: 1024px)",
   sp: "screen and (max-width: 768px)",
 );
+
 @mixin mq($bp) {
-  @media #{map-get(breakpoint, bp)} {
+  @media #{map-get($breakpoint, $bp)} {
     @content;
   }
 }
