--- a/wp-content/themes/YAMATAKA/src/scss/_set.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_set.scss
@@ -6,6 +6,9 @@ html {
   letter-spacing: 0.05em;
   margin-top: 0;
 }
+body {
+  font-size: 62.5%;
+}
 a {
   text-decoration: none;
   color: $color-text-green;
@@ -39,6 +42,7 @@ a {
 
 /*---------- header ----------*/
 .header {
+  z-index: 2;
   background: rgba(255, 255, 255, 0.75);
   padding: 0 30px;
   width: 100vw;
@@ -60,6 +64,7 @@ a {
     &_list {
       display: flex;
       font-size: 1.5rem;
+      font-weight: bold;
       color: $color-text-green;
       li {
         list-style: none;
@@ -67,6 +72,38 @@ a {
           margin-right: 55px;
         }
       }
+    }
+  }
+}
+/*---------- hero ----------*/
+.hero {
+  width: 100vw;
+  height: 100vh;
+  background-image: url(../../img/hero.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
+  &::after {
+    content: "";
+    position: absolute;
+    width: 105vw;
+    height: 100px;
+    box-shadow: 0 -10px 10px #fff;
+    bottom: -100px;
+    left: -2.5vw;
+  }
+  &_txt {
+    position: absolute;
+    bottom: 6%;
+    left: 3%;
+    h1 {
+      font-size: 4.5rem;
+      font-weight: 600;
+      letter-spacing: 0.12em;
+      color: #fff;
+      text-shadow: #222222 0 3px 6px;
     }
   }
 }
