--- a/wp-content/themes/YAMATAKA/src/css/style.css
+++ b/wp-content/themes/YAMATAKA/src/css/style.css
@@ -60,6 +60,7 @@ a {
   padding: 0 30px;
   width: 100vw;
   height: 70px;
+  box-shadow: rgba(0, 0, 0, 0.2549019608) 0 3px 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -67,7 +68,7 @@ a {
 }
 .header_img {
   width: auto;
-  height: 90%;
+  height: 80%;
 }
 .header_img img {
   width: auto;
@@ -167,7 +168,7 @@ a {
   color: #1b5d00;
   border-radius: 50%;
   border: #1b5d00 2px solid;
-  padding: 4.5px 7px;
+  padding: 4px 7px;
   margin-right: 5px;
 }
 .hero_info_week .off {
@@ -199,4 +200,7 @@ a {
   font-weight: bold;
   font-size: 2.2rem;
   letter-spacing: 0.1em;
+}
+.hero_info_tel_num img {
+  margin-right: 10px;
 }/*# sourceMappingURL=style.css.map */
