--- a/wp-content/themes/YAMATAKA/src/scss/_set.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_set.scss
@@ -50,13 +50,14 @@ a {
   padding: 0 30px;
   width: 100vw;
   height: 70px;
+  box-shadow: #00000041 0 3px 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: fixed;
   &_img {
     width: auto;
-    height: 90%;
+    height: 80%;
     img {
       width: auto;
       height: 100%;
@@ -157,7 +158,7 @@ a {
         color: $color-deep-green;
         border-radius: 50%;
         border: $color-deep-green 2px solid;
-        padding: 4.5px 7px;
+        padding: 4px 7px;
         margin-right: 5px;
       }
       .off {
@@ -188,6 +189,9 @@ a {
           font-weight: bold;
           font-size: 2.2rem;
           letter-spacing: 0.1em;
+        }
+        img {
+          margin-right: 10px;
         }
       }
     }
