--- a/wp-content/themes/YAMATAKA/src/scss/_main.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_main.scss
@@ -1,2 +1,38 @@
 @use "mixin" as m;
 @use "variables" as *;
+
+/*---------- know ----------*/
+.know {
+  &_content {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    &_one {
+      border-radius: 10px;
+      width: 24%;
+      padding: 2.5%;
+      background: $color-grey;
+      box-shadow: 5px 5px 1px #00000025;
+      &_title {
+        display: flex;
+        align-items: center;
+        h2 {
+          font-size: 2.5rem;
+          color: $color-text-green;
+          white-space: nowrap;
+        }
+        img {
+          margin-right: 5%;
+        }
+      }
+      p {
+        font-size: 1.7rem;
+        margin-top: 20px;
+        line-height: 2.8rem;
+      }
+    }
+  }
+}
