--- a/wp-content/themes/YAMATAKA/src/scss/_set.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_set.scss
@@ -5,6 +5,7 @@ html {
   font-family: YuGothic, "Yu Gothic", sans-serif;
   letter-spacing: 0.05em;
   margin-top: 0;
+  height: 200vh;
 }
 body {
   font-size: 62.5%;
@@ -23,6 +24,8 @@ a {
 .inner {
   margin: 0 auto;
   max-width: 1100px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .flex {
   display: flex;
@@ -45,16 +48,17 @@ a {
 
 /*---------- header ----------*/
 .header {
-  z-index: 2;
+  z-index: 5;
   background: rgba(255, 255, 255, 0.75);
   padding: 0 30px;
   width: 100vw;
-  height: 70px;
+  height: 75px;
   box-shadow: #00000041 0 3px 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: fixed;
+  transition: all 0.5s;
   &_img {
     width: auto;
     height: 80%;
@@ -141,7 +145,7 @@ a {
           color: #fff;
         }
         span {
-          font-size: 1.7rem;
+          font-size: 1.9rem;
           font-weight: bold;
           padding: 0 3px;
           border-bottom: 1px solid #fff;
@@ -153,12 +157,12 @@ a {
       display: flex;
       align-items: flex-end;
       .on {
-        font-size: 1.4rem;
+        font-size: 1.5rem;
         font-weight: bold;
         color: $color-deep-green;
         border-radius: 50%;
         border: $color-deep-green 2px solid;
-        padding: 4px 7px;
+        padding: 2px 6px;
         margin-right: 5px;
       }
       .off {
@@ -171,7 +175,7 @@ a {
         border: $color-deep-green 2px solid;
         opacity: 0.5;
         margin-right: 3px;
-        padding-left: 3px;
+        padding-left: 3.5px;
       }
     }
     &_tel {
