--- a/wp-content/themes/YAMATAKA/src/css/style.css
+++ b/wp-content/themes/YAMATAKA/src/css/style.css
@@ -11,6 +11,8 @@ html {
 
 body {
   font-size: 62.5%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 a {
@@ -308,12 +310,28 @@ a {
   padding-left: 15px;
   padding-right: 15px;
 }
+@media screen and (max-width: 768px) {
+  .know_content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .know_content_one {
   border-radius: 10px;
   width: 24%;
   padding: 2.5%;
   background: #f8f8f8;
   box-shadow: 5px 5px 1px rgba(0, 0, 0, 0.1450980392);
+}
+@media screen and (max-width: 768px) {
+  .know_content_one {
+    padding: 10%;
+    width: 90%;
+  }
+  .know_content_one:not(:first-child) {
+    margin-top: 30px;
+  }
 }
 .know_content_one_title {
   display: flex;
