--- a/wp-content/themes/YAMATAKA/src/scss/_main.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_main.scss
@@ -10,12 +10,24 @@
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
+    @include m.mq(sp) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
     &_one {
       border-radius: 10px;
       width: 24%;
       padding: 2.5%;
       background: $color-grey;
       box-shadow: 5px 5px 1px #00000025;
+      @include m.mq(sp) {
+        &:not(:first-child) {
+          margin-top: 30px;
+        }
+        padding: 10%;
+        width: 90%;
+      }
       &_title {
         display: flex;
         align-items: center;
