--- a/wp-content/themes/YAMATAKA/src/scss/_set.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_set.scss
@@ -55,7 +55,7 @@ a {
   background: rgba(255, 255, 255, 0.75);
   padding: 0 30px;
   width: 100vw;
-  height: 75px;
+  height: 70px;
   box-shadow: #00000041 0 3px 5px;
   display: flex;
   justify-content: space-between;
@@ -189,17 +189,33 @@ a {
     position: absolute;
     bottom: 6%;
     left: 3%;
+    @include m.mq(tab) {
+      top: 10%;
+    }
+    @include m.mq(sp) {
+      left: 8%;
+      top: 13%;
+    }
     h1 {
       font-size: 5.8rem;
       font-weight: 600;
       letter-spacing: 0.12em;
       color: #fff;
       text-shadow: #222222 0 3px 6px;
+      @include m.mq(tab) {
+        writing-mode: vertical-rl;
+        font-size: 5.5rem;
+      }
+      @include m.mq(sp) {
+        font-size: 2.5rem;
+        letter-spacing: 0.2em;
+      }
     }
   }
   &_info {
     bottom: 3%;
-    right: 2%;
+    left: 50%;
+    transform: translateX(-50%);
     box-shadow: #00000041 7px 7px 7px;
     width: 360px;
     height: 360px;
@@ -209,6 +225,11 @@ a {
     position: absolute;
     z-index: 3;
     align-items: center;
+    @include m.mq(sp) {
+      width: 80%;
+      height: 290px;
+      padding: 10px 20px;
+    }
     &_time {
       &:not(:first-child) {
         margin-top: 5px;
@@ -224,6 +245,10 @@ a {
         padding: 16px 20px;
         background: $color-deep-green;
         border-radius: 50px;
+        @include m.mq(sp) {
+          width: 250px;
+          padding: 11px 7px;
+        }
         p {
           color: #fff;
         }
@@ -263,6 +288,9 @@ a {
     }
     &_tel {
       margin-top: 15px;
+      @include m.mq(tab) {
+        margin-top: 5px;
+      }
       p {
         font-size: 1.1rem;
       }
@@ -271,6 +299,10 @@ a {
         height: 60px;
         background: $color-green;
         border-radius: 10px;
+        @include m.mq(sp) {
+          width: 250px;
+          height: 50px;
+        }
         p {
           color: #fff;
           font-weight: bold;
