--- a/wp-content/themes/YAMATAKA/src/scss/_set.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_set.scss
@@ -5,7 +5,6 @@ html {
   font-family: YuGothic, "Yu Gothic", sans-serif;
   letter-spacing: 0.05em;
   margin-top: 0;
-  height: 200vh;
   scroll-behavior: smooth;
 }
 body {
@@ -214,8 +213,7 @@ a {
   }
   &_info {
     bottom: 3%;
-    left: 50%;
-    transform: translateX(-50%);
+    right: 1%;
     box-shadow: #00000041 7px 7px 7px;
     width: 360px;
     height: 360px;
@@ -226,6 +224,7 @@ a {
     z-index: 3;
     align-items: center;
     @include m.mq(sp) {
+      right: 2%;
       width: 80%;
       height: 290px;
       padding: 10px 20px;
@@ -256,7 +255,6 @@ a {
           font-size: 1.9rem;
           font-weight: bold;
           padding: 0 3px;
-          border-bottom: 1px solid #fff;
         }
       }
     }
