--- a/wp-content/themes/YAMATAKA/src/scss/_main.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_main.scss
@@ -48,3 +48,60 @@
     }
   }
 }
+/*---------- 診療科 ----------*/
+.department {
+  &_content {
+    display: flex;
+    justify-content: space-between;
+    &_parts {
+      width: 27%;
+      background: #fffdeb;
+      box-shadow: 0 0 5px #938800;
+      padding: 10px;
+      border-radius: 100px;
+      aspect-ratio: 1/1;
+      position: relative;
+      transition: all 0.2s;
+      &:hover {
+        filter: brightness(90%);
+      }
+      &_img {
+        width: 60%;
+        aspect-ratio: 5/3;
+        margin-bottom: 20px;
+        background-image: url(../../img/zibika.png);
+        background-position: center;
+        background-size: contain;
+      }
+      h1 {
+        font-size: 4rem;
+      }
+      p {
+        font-size: 1.7rem;
+      }
+      a {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+      }
+      &:nth-of-type(2) {
+        background: #f4fdfd;
+        box-shadow: #006565 0 0 5px;
+        .department_content_parts_img {
+          background-image: url(../../img/ganka.png);
+          background-size: cover;
+        }
+      }
+      &:nth-of-type(3) {
+        background: #fdf4fb;
+        box-shadow: #760017 0 0 5px;
+        .department_content_parts_img {
+          background-image: url(../../img/naika.png);
+          // background-size: cover;
+        }
+      }
+    }
+  }
+}
