--- a/wp-content/themes/YAMATAKA/src/css/style.css
+++ b/wp-content/themes/YAMATAKA/src/css/style.css
@@ -364,11 +364,15 @@ a {
   }
 }
 .know_content_one {
+  position: relative;
   border-radius: 10px;
   width: 24%;
   padding: 2.5%;
   background: #f8f8f8;
   box-shadow: 5px 5px 1px rgba(0, 0, 0, 0.1450980392);
+  transition: all 0.3s;
+  top: 0;
+  left: 0;
 }
 @media screen and (max-width: 768px) {
   .know_content_one {
@@ -378,6 +382,18 @@ a {
   .know_content_one:not(:first-child) {
     margin-top: 30px;
   }
+}
+.know_content_one:hover {
+  box-shadow: 0 0 0 #fff;
+  left: 5px;
+  top: 5px;
+}
+.know_content_one a {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 .know_content_one_title {
   display: flex;
@@ -398,6 +414,9 @@ a {
 }
 
 /*---------- 診療科 ----------*/
+.department {
+  padding-top: 0;
+}
 .department_content {
   display: flex;
   justify-content: space-between;
