--- a/wp-content/themes/YAMATAKA/src/scss/_main.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_main.scss
@@ -16,17 +16,33 @@
       align-items: center;
     }
     &_one {
+      position: relative;
       border-radius: 10px;
       width: 24%;
       padding: 2.5%;
       background: $color-grey;
       box-shadow: 5px 5px 1px #00000025;
+      transition: all 0.3s;
+      top: 0;
+      left: 0;
       @include m.mq(sp) {
         &:not(:first-child) {
           margin-top: 30px;
         }
         padding: 10%;
         width: 90%;
+      }
+      &:hover {
+        box-shadow: 0 0 0 #fff;
+        left: 5px;
+        top: 5px;
+      }
+      a {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
       }
       &_title {
         display: flex;
@@ -50,6 +66,7 @@
 }
 /*---------- 診療科 ----------*/
 .department {
+  padding-top: 0;
   &_content {
     display: flex;
     justify-content: space-between;
