--- a/wp-content/themes/YAMATAKA/src/scss/_variables.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_variables.scss
@@ -1,6 +1,6 @@
 /*---------- color ----------*/
 $color-green: #268e00;
-$color-sub-green: #f8fff9;
+$color-sub-green: #eafced;
 $color-deep-green: #1b5d00;
 $color-text-green: #4f6a20;
 $color-grey: #f8f8f8;
