--- a/wp-content/themes/YAMATAKA/src/scss/_main.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_main.scss
@@ -153,6 +153,7 @@
       }
       &_inner {
         position: relative;
+        top: 70px;
         z-index: 10;
         max-width: 1300px;
         margin: 0 auto;
