--- a/wp-content/themes/YAMATAKA/src/css/style.css
+++ b/wp-content/themes/YAMATAKA/src/css/style.css
@@ -123,7 +123,9 @@ a {
   }
 }
 .header_nav_list li {
+  position: relative;
   list-style: none;
+  transition: all 0.5s;
 }
 .header_nav_list li:not(:last-child) {
   margin-right: 55px;
@@ -132,6 +134,45 @@ a {
   .header_nav_list li:not(:last-child) {
     margin-right: 30px;
   }
+}
+.header_nav_list li::before {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  right: 50%;
+  width: 0;
+  height: 2px;
+  background: #4f6a20;
+  transition: all 0.5s;
+}
+.header_nav_list li:hover::before {
+  width: 50%;
+}
+.header_nav_list li::after {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  left: 50%;
+  width: 0;
+  height: 2px;
+  background: #4f6a20;
+  transition: all 0.5s;
+}
+.header_nav_list li:hover::after {
+  width: 50%;
+}
+.header_nav_list li::before {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  right: 50%;
+  width: 0;
+  height: 2px;
+  background: #4f6a20;
+  transition: all 0.5s;
+}
+.header_nav_list li:hover::before {
+  width: 50%;
 }
 .header_nav_sp {
   display: none;
@@ -520,6 +561,7 @@ a {
 }
 .news_content_new_inner {
   position: relative;
+  top: 70px;
   z-index: 10;
   max-width: 1300px;
   margin: 0 auto;
