--- a/wp-content/themes/YAMATAKA/src/css/style.css
+++ b/wp-content/themes/YAMATAKA/src/css/style.css
@@ -314,6 +314,8 @@ a {
     right: 2%;
     width: 80%;
     height: 290px;
+    max-width: 320px;
+    min-width: 300px;
     padding: 10px 20px;
   }
 }
@@ -414,6 +416,12 @@ a {
   padding-left: 15px;
   padding-right: 15px;
 }
+@media screen and (max-width: 1024px) {
+  .know_content {
+    max-width: 600px;
+    flex-wrap: wrap;
+  }
+}
 @media screen and (max-width: 768px) {
   .know_content {
     display: flex;
@@ -425,6 +433,7 @@ a {
   position: relative;
   border-radius: 10px;
   width: 24%;
+  min-width: 250px;
   padding: 2.5%;
   background: #f8f8f8;
   box-shadow: 5px 5px 1px rgba(0, 0, 0, 0.1450980392);
@@ -432,12 +441,23 @@ a {
   top: 0;
   left: 0;
 }
+@media screen and (max-width: 1024px) {
+  .know_content_one {
+    min-width: 250px;
+  }
+  .know_content_one:not(:nth-of-type(1)):not(:nth-of-type(2)) {
+    margin-top: 50px;
+  }
+}
 @media screen and (max-width: 768px) {
   .know_content_one {
     padding: 10%;
     width: 90%;
   }
   .know_content_one:not(:first-child) {
+    margin-top: 30px;
+  }
+  .know_content_one:not(:nth-of-type(1)):not(:nth-of-type(2)) {
     margin-top: 30px;
   }
 }
@@ -532,6 +552,8 @@ a {
 /*---------- news ----------*/
 .news_content {
   width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 .news_content_new {
   height: 600px;
