--- a/wp-content/themes/YAMATAKA/src/scss/_main.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_main.scss
@@ -10,6 +10,10 @@
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
+    @include m.mq(tab) {
+      max-width: 600px;
+      flex-wrap: wrap;
+    }
     @include m.mq(sp) {
       display: flex;
       flex-direction: column;
@@ -19,14 +23,24 @@
       position: relative;
       border-radius: 10px;
       width: 24%;
+      min-width: 250px;
       padding: 2.5%;
       background: $color-grey;
       box-shadow: 5px 5px 1px #00000025;
       transition: all 0.3s;
       top: 0;
       left: 0;
+      @include m.mq(tab) {
+        min-width: 250px;
+        &:not(:nth-of-type(1)):not(:nth-of-type(2)) {
+          margin-top: 50px;
+        }
+      }
       @include m.mq(sp) {
         &:not(:first-child) {
+          margin-top: 30px;
+        }
+        &:not(:nth-of-type(1)):not(:nth-of-type(2)) {
           margin-top: 30px;
         }
         padding: 10%;
@@ -126,6 +140,8 @@
 .news {
   &_content {
     width: 100vw;
+    max-width: 100vw;
+    overflow-x: hidden;
     &_new {
       height: 600px;
       position: relative;
