--- a/wp-content/themes/YAMATAKA/src/scss/_set.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_set.scss
@@ -283,6 +283,8 @@ a {
       right: 2%;
       width: 80%;
       height: 290px;
+      max-width: 320px;
+      min-width: 300px;
       padding: 10px 20px;
     }
     &_time {
