--- a/wp-content/themes/YAMATAKA/src/scss/_set.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_set.scss
@@ -372,3 +372,38 @@ a {
     }
   }
 }
+/*---------- subtitle ----------*/
+.sub_title {
+  text-align: center;
+  position: relative;
+  color: $color-text-green;
+  font-size: 3.7rem;
+  z-index: 10;
+  text-shadow: 0 0 5px 3px #eee;
+  @include m.mq(sp) {
+    font-size: 3rem;
+  }
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: $color-sub-green;
+    left: 50%;
+    top: -20px;
+    z-index: -1;
+  }
+  &::after {
+    content: "";
+    position: absolute;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    background: #acff83;
+    left: 50%;
+    top: -30px;
+    z-index: -2;
+    box-shadow: 0 0 5px 3px #eee;
+  }
+}
